CA COMPILEgit add swagger/spring-server/src/main/* swagger/fruits-specs/src/main/resources/api-spec.yamlgit add swagger/spring-server/src/main/* swagger/fruits-specs/src/main/resources/api-spec.yamlgit add swagger/spring-server/src/main/* swagger/fruits-specs/src/main/resources/api-spec.yaml
